--- a/RecentWork.html
+++ b/RecentWork.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -144,7 +144,7 @@
                                 <p></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-primary" href="HowtoHackAlgebra.site" target="_blank">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-primary" href="thegiantslayers.github.io/HowtoHackAlgebra/" target="_blank">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 48%;">
@@ -267,7 +267,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="mDAYJoU2wctceffw6o4HQzru0mA6IaeW9RGdgqQfhlhmgMNWeEXabsR4SwXHCzG9MXnsA2IdGWXTIsmSNTzfI+GiMeAyFUTmh8FNB1rk2cuTIVEgeFqMOkxPBAIiTfsw" data-form-email="true">
+                        <input type="hidden" value="f/em2YGg0342wl4StHDPu0y2sEJzWsTFn6ZO21ggtc1lRNr5uEOxTjAJXRr12e/fR4ppSg8QmQTEDt+NQrIH2jrfhqZADNMtQPRSX+sjUdpK+fWO9fVpnwc26RwngZqo" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
