--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -256,7 +256,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="yhZ73uHMvhtuPXOHlxV/zyzWq2gPppCKouZaOODRQEY5GlRNbwRH876SWuZx5GNk7T9JqABRw7RfsE1Smy+osdDVlJK3wwcpakclzCVMQKIuUQljlFLj4LxgHcQU+8YM" data-form-email="true">
+                        <input type="hidden" value="mO8/srcAp9xuTuI/GkSnpTz2UL6d8/tvqT6XD2Si4/dw55vql8LOIujCfHFFG6UJmBUjIJMWreWkrw9Ev7sj2OBFrMhJXzhgWv5vzWfTAYeBlAFCBGJukNp/CZy1hycJ" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
