--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -256,7 +256,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="mO8/srcAp9xuTuI/GkSnpTz2UL6d8/tvqT6XD2Si4/dw55vql8LOIujCfHFFG6UJmBUjIJMWreWkrw9Ev7sj2OBFrMhJXzhgWv5vzWfTAYeBlAFCBGJukNp/CZy1hycJ" data-form-email="true">
+                        <input type="hidden" value="rShSWNB9xbtjW40d+Gx27b6yYL5Gjz6fx0VSW5xUPG0AD2nX0FkmVaCZ8GdnUgDI54L9pchAeEShLXA5KMfKxEpI34t2CJzrMgQNyeOlAdtCx29ZFydS3LO2TbGnj46x" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
