--- a/RecentWork.html
+++ b/RecentWork.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1o" data-bg-video="https://www.youtube.com/embed/D93kuXAYGzs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -139,7 +139,7 @@
 
                   </div>
 
-                  <div><a class="btn btn-primary" href="https://thegiantslayers.github.io/HowtoHackAlgebra/" target="_blank">MORE</a></div>
+                  <div><a class="btn btn-primary" href="https://howtohackalgebra.site" target="_blank">MORE</a></div>
               </div>
 
 
@@ -261,7 +261,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="BHVDyOrfBl/BoMMBQN+vjabkP/cBWB7aFjG6EAU7n7IqmTiSsVLBb/b+Eq3ZAJG/8SaRrd4tzUzq1xEpGP1/bbjVVL5sS4VzBtzZ/rvCT8mKUCpP6Qsub4+8pqC8uvm6" data-form-email="true">
+                        <input type="hidden" value="my3bLOTjZDiwArEMGphkQ4LT9NfI7Q9EYuqnKMiuBQdL2xsMTL3f18tKU4unF7wPOmpNz/9FgFL7GVM5gjai886kgodRuT4MmX2VCpeODZlPJ2DTTw3eYe4LNgIpzK9y" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
