--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -256,7 +256,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="jfskAbjVkzqBIOWNYzV12EYzDwshgbH/queLIhYPUoMef+0NJok1TAE+OeRHPWvEP5BNS7myR+diqFlkJztazII9y1QwMo7qPDxohvYzNnGcldGKGP5CjJXRxNPhLu/U" data-form-email="true">
+                        <input type="hidden" value="Sw6TagmzWF5qPuUviXU0L6pKVOffC4K+lCv5W7NwKgI1UfsYPPXJ2V01Id9RGjoU5cNMoyVnl06atj/Rk8BEGuqfDQBZxwEUbDfV2zqjEq4xb3G+4kiD1UM5ku86nbfc" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
